--- a/assignment2/page1.html
+++ b/assignment2/page1.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <h1>Retention Requirements</h1>
-    <img src="not bug.jpg" alt="Image Description" >
+    <img src="aris-arisu.gif" alt="Image Description" >
     <ul>
         <li><p><a href="Home.html">Home</a></p></li>
         <li><p><a href="page1.html">Page 1</a></p></li>
