--- a/assignment2/page2.html
+++ b/assignment2/page2.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <h1>Creative Technologies Courses (CTK)</h1>
-    <img src="Bug.jpg" alt="Image Description" >
+    <img src="100kg.gif" alt="Image Description" >
     <ul>
         <li><p><a href="Home.html">Home</a></p></li>
         <li><p><a href="page1.html">Page 1</a></p></li>
