--- a/assignment2/Home.html
+++ b/assignment2/Home.html
@@ -6,7 +6,7 @@
   </head>
   <body>
 <h1>Creative Technologies Program (CTK)</h1>
-<img src="maybe bug.jpg" alt="Image Description" >
+<img src="ars_blue230901_2.gif" alt="Image Description" >
 <ul>
   <li><p><a href="Home.html">Home</a></p></li>
   <li><p><a href="page1.html">Page 1</a></p></li>
